repoze.who Changelog
====================

1.1a1 (unreleased)
------------------

Features
~~~~~~~~

- The ``auth_tkt`` plugin now implements the ``IAuthenticator`` interface,
  and should normally be used both as an ``IIdentifier`` and an
  ``IAuthenticator``.

- Factored out the API of the middleware object to make it useful from
  within the application.  Applications using ``repoze.who``` now fall into
  one of three catgeories:

  - "middleware-only" applications are configured with middleware, and
    use either ``REMOTE_USER`` or ``repoze.who.identity`` from the environment
    to determing the authenticated user.

  - "bare metal" applications use no ``repoze.who`` middleware at all:
    instead, they configure and an ``APIFactory`` object at startup, and
    use it to create an ``API`` object when needed on a per-request basis.

  - "hybrid" applications are configured with ``repoze.who`` middleware,
    but use a new library function to fetch the ``API`` object from the
    environ.

Bugs Fixed
~~~~~~~~~~

- Fix http://bugs.repoze.org/issue102: when no challengers existed,
  logging would cause an exception.

- Remove ``ez_setup.py`` and dependency on it in setup.py (support
  distribute).

Backward Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~

- The middleware used to allow identifier plugins to "pre-authenticate"
  an identity.  This feature is no longer supported: the ``auth_tkt`` 
  plugin, which used to use the feature, is now configured to work as
  an authenticator plugin.

- The ``repoze.who.middleware:PluggableAuthenticationMiddleware`` class
  no longer has the following (non-API) methods (now made API methods
  of the ``repoze.who.api:API`` class):

  - ``add_metadata``
  - ``authenticate``
  - ``challenge``
  - ``identify``

- The following (non-API) functions moved from ``repoze.who.middleware`` to
  ``repoze.who.api``:
  
  - ``make_registries``
  - ``match_classification``
  - ``verify``


1.0.18 (2009-11-05)
-------------------
